Limpeza final para envio oficial - README moderno, remoção de arquivos desnecessários

--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,13 @@ Thumbs.db
 *.bak
 *.backup
 
+# QGIS specific
+*.qgs~
+*.qgz~
+
+# Development tools
+package_plugin.py
+
 # Development and testing
 test_data/
 tests/
